Fix: Remove unnecessary vertical scrollbar

--- a/documentation/documentation.css
+++ b/documentation/documentation.css
@@ -81,7 +81,7 @@ a {
 /* || Side Navbar styles */
 
 .side-navbar {
-  height: 100%;
+  height: calc(100vh - 90px);
   border: var(--documentation-border-lightgray);
   margin-top: 2rem;
 }
@@ -93,7 +93,7 @@ a {
   padding: 0 1rem;
   width: 200px;
   overflow-y: auto;
-  height: 100%;
+  height: calc(100vh - 91px);
   list-style: none;
 }
 
@@ -146,7 +146,7 @@ a {
 
 .component-section {
   display: flex;
-  height: 90vh;
+  height: calc(100vh - 70px);
   max-width: 1440px;
   margin: 0 auto;
 }
